[package]
name = "surfed_subways"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy-inspector-egui = "0.20.0"
bevy_common_assets = { version = "0.7.0", features = ["toml"] }
rand = "0.8.5"
serde = { version = "1.0.190" }
serde_derive = "1.0.190"
toml = "0.8.6"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
